# AI-DOIT

./: .gitignore  README.md
.cursor/rules/: reddchat.mdc
backend/: .env.example  .flaskenv  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/services/: openai_service.py
backend/app/tests/: test_openai.py
backend/reddchat/: __init__.py  config.py  db.py  openai_bp.py
backend/reddchat/db/: schema.sql
backend/reddchat/templates/: base.html
backend/reddchat/templates/chat/: index.html
backend/tests/: conftest.py  test_db.sql
docs/: backend.md  frontend.md  question.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: page.tsx
